--- a/skins/Velvet/index.css
+++ b/skins/Velvet/index.css
@@ -83,7 +83,7 @@ a, .windowbg a, #linktree a
 	color: #000
 	background-image: none
 
-tr.windowbg td, tr.windowbg2 td, tr.approvebg td, tr.highlight2 td, thead th, .wrc
+tr.windowbg td, tr.windowbg2 td, tr.approvebg td, tr.highlight2 td, thead th, .wrc final
 	border: 1px solid #DDDDDD
 
 dl#feed dt
